Made function to get today and forecast weather

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,6 +29,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
 }
 
 h1 {
@@ -94,7 +97,6 @@ li {
 .card-search {
   width: 90%;
   max-width: 470px;
-  position: fixed;
   top: 0;
   left: 0;
 }
@@ -110,6 +112,9 @@ li {
   margin: 1em;
   padding: 0.6em 1.2em;
   flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
 .card-weather {
@@ -137,3 +142,4 @@ li {
   margin: 0.1em;
   padding: 0.1em 0.2em 0.2em 0.2em;
 }
+
