Add flex gap insteand of margin in cards

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,7 +106,8 @@ li {
 }
 
 .card-container {
-  display: flex;
+  display: inline-flex;
+  gap: 1em;
   margin: 1em;
   padding: 0.6em 1.2em;
   flex-wrap: wrap;
@@ -119,7 +120,6 @@ li {
 .card-weather {
   width: 250px;
   display: flex;
-  margin: 1em;
   flex-direction: column;
   align-items: center;
   justify-content: center;
